--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Instagram</title>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="img-phone">
-            <img src="/img/instagram-celular.png" alt="celular">
+            <img src="./img/instagram-celular.png" alt="celular">
         </div>
 
 
@@ -22,10 +22,10 @@
 
             <div class="group">
 
-                <img src="/img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
 
                 <div class="perfil">
-                    <img src="/img/perfil.jpg" alt="foto de perfil">
+                    <img src="./img/perfil.jpg" alt="foto de perfil">
                 </div>
 
                 <a href="#" class="instagram-login">Continue como Tiago.Barbosa88</a>
